--- a/src/app/index.css
+++ b/src/app/index.css
@@ -105,9 +105,31 @@ body {
 }
 .input-image {
   background-color: #f1f1f1ff;
-  height: 180px;
-  /* display: none; */
+  height: 30px;
 }
-.input-image1 {
-  display: none;
+.button2 {
+  background-color: #f1f1f1ff;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.remove-button {
+  width: 24px;
+  height: 24px;
+  border-radius: 50px;
+  background-color: #202124;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.kk {
+  display: flex;
+  justify-content: flex-end;
+}
+.image {
+  display: flex;
+  position: relative;
 }
