--- a/src/app/index.css
+++ b/src/app/index.css
@@ -106,6 +106,8 @@ body {
 .input-image {
   background-color: #f1f1f1ff;
   height: 30px;
+  color: #121316;
+  font-size: 13px;
 }
 .button2 {
   background-color: #f1f1f1ff;
@@ -119,11 +121,10 @@ body {
   width: 24px;
   height: 24px;
   border-radius: 50px;
-  background-color: #202124;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 .kk {
   display: flex;
